--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 h1 {
   color:blue;
 }
+
+#main_UI {
+  width:100vw;
+  height:max-content;
+  position: fixed;
+  background-color:grey;
+}
+
+#top_banner {
+  width:100%;
+  height:100px;
+  background-color:lightgrey;
+}
