--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 *{
-  color:teal;
+  color: black;
+  padding: 0;
+  margin: 0;
 }
 
 
 #main_UI {
-  width:100vw;
-  height:100vh;
-  background-color:red;
+  width: 100vw;
+  height: 100vh;
+  background-color: red;
 
 }
