--- a/style.css
+++ b/style.css
@@ -1,13 +1,57 @@
 *{
-  color: black;
+  color: white;
   padding: 0;
   margin: 0;
+  font-family:helvetica;
 }
 
 
 #main_UI {
   width: 100vw;
-  height: 100vh;
-  background-color: grey;
+  height: max-content;
+  background-color: #121212;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 
+#top_nav {
+  width:100%;
+  height:max-content;
+  background-color: black;
+  color:white;
+}
+
+#greeting {
+  width:100%;
+  padding: .5rem 0px .5rem 0px;
+  
+  text-align:center;
+  color:white;
+  font-size:.75rem;
+  font-style:italic;
+  font-weight:10;
+  
+}
+
+#block_one {
+  width:94%;
+  height:250px;
+  background-color: grey;
+  margin-top: 15px;
+  
+  border-radius:1rem;
+}
+
+#block_one_left {
+  font-weight:400;
+  font-size:.6rem;
+  
+  background-color:blue;
+  width:50%;
+  height:100%;
+  
+  padding:15px;
+    
+  border-radius:1rem;
 }
