--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 
 #top_nav {
   width:100%;
-  height:max-content;
+  height:10vh;
   background-color: black;
   color:white;
 }
@@ -38,17 +38,17 @@
   width:94%;
   height:48%;
   background-color: grey;
-  margin-top: 15px;
+  margin-top: 12vh;
   
   border-radius:1rem;
   display:flex;
+  position:fixed;
 }
 
 #block_one-left {
   font-weight:400;
   font-size:.6rem;
   
-  background-color:blue;
   width:50%;
   height:100%;
   
