--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
   padding: 0;
   margin: 0;
   font-family:helvetica;
+  
+  box-sizing:border-box;
 }
 
 
@@ -17,30 +19,36 @@
 
 #top_nav {
   width:100%;
-  height:10vh;
+  height:max-content;
   background-color: black;
   color:white;
+  display:flex;
 }
 
 #greeting {
   width:100%;
+  height:max-content;
+  background-color:black;
   padding: .5rem 0px .5rem 0px;
+  
+  
   
   text-align:center;
   color:white;
   font-size:.75rem;
   font-style:italic;
   font-weight:10;
-  
 }
 
 #block_one {
   width:94%;
   height:48vh;
-  background-color: grey;
+  background: rgb(0,0,0);
+  background: linear-gradient(180deg, rgba(90,90,90,1) 0%, rgba(68,68,68,0) 100%);
   border-radius:1rem;
   display:flex;
   margin-bottom:38vh;
+  padding:12px;
 }
 
 #block_one-left {
@@ -72,7 +80,6 @@
   width:50%;
   height:100%;
   
-  padding:15px;
   box-sizing:border-box;
-  border-radius:1rem;
+  opacity: 80%;
 }
