--- a/style.css
+++ b/style.css
@@ -81,5 +81,22 @@
   height:100%;
   
   box-sizing:border-box;
-  opacity: 80%;
+  opacity: 80
 }
+
+.daily_list {
+  width:100%;
+  list-style-type: none;
+  padding:4%;
+  font-size:10px;
+}
+
+.mb {
+  margin-bottom:2.5%;
+}
+
+.me {
+  position:relative;
+  bottom:-2.1px;
+}
+
