--- a/style.css
+++ b/style.css
@@ -85,18 +85,22 @@
 }
 
 .daily_list {
+  background-color:green;
   width:100%;
+  height:100%;
   list-style-type: none;
   padding:4%;
-  font-size:10px;
+  font-size:max;
 }
 
 .mb {
+  width:100%;
+  height:9%;
   margin-bottom:2.5%;
+  border:1px solid white;
 }
 
 .me {
   position:relative;
-  bottom:-2.1px;
+  bottom:-15%;
 }
-
