--- a/style.css
+++ b/style.css
@@ -65,23 +65,25 @@
 
 .daily_quote {
   margin-top:25%;
-   font-weight:400;
+  font-weight:400;
+  opacity:90%;
 }
 
 .daily_quote-ref {
   font-weight:100;
+  opacity:70%;
 }
 
 #block_one-right {
   font-weight:400;
   font-size:.6rem;
   
-  background-color:red;
+  background: rgb(8,104,227);
+  background: linear-gradient(90deg, rgba(8,104,227,.6) 0%, rgba(8,104,227,0.5) 55%, rgba(8,104,227,0) 100%);
   width:50%;
   height:100%;
   
   box-sizing:border-box;
-  opacity: 80
 }
 
 .daily_list {
@@ -90,15 +92,20 @@
   list-style-type: none;
   padding:4%;
   font-size:max;
+  opacity:100%;
 }
 
 .mb {
   width:100%;
-  height:6%;
+  height:8%;
   margin-bottom:2.5%;
+  
 }
 
 .me {
   position:relative;
   bottom:-15%;
+  width:max;
 }
+
+
