--- a/style.css
+++ b/style.css
@@ -130,6 +130,10 @@ body {
   padding:12px;
 }
 
+textarea {
+  background-color:#7b7f85;
+}
+
 #milestones {
   display:flex;
   flex-wrap:wrap;
@@ -157,10 +161,31 @@ body {
   opacity:30%;
 }
 
+#milestone24h {
+  background-color:silver;
+}
+#milestone7d {
+  background-color:red;
+}
+#milestone1w {
+  background-color:yellow;
+}
+#milestone1m {
+  background-color:green;
+}
+#milestone2m {
+  background-color:blue;
+}
+#milestone3m {
+  background-color:purple;
+}
+#milestone6m {
+  background-color:black;
+}
 
 #journal_input {
   width:100%;
-  height:125px;
+  height:140px;
   color:black;
   display:flex;
   text-wrap:wrap;
@@ -175,6 +200,6 @@ body {
   padding:12px;
   display:flex;
   flex-wrap:wrap;
-  gap:6px;
+  gap:12px;
 }
 
