--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ textarea {
   flex-wrap:wrap;
   width:100%;
   background-color: rgba(90,90,90,.7);
-  background-image: url("EF2.jpg");
+  background-image: url("./EF2.jpg");
   background-size:100%;
   border-radius:1rem;
   padding:12px;
