--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ textarea {
   width:100%;
   background-color: rgba(90,90,90,.7);
   background-image:url('EF2.jpg');
+  background-size:100%;
   border-radius:1rem;
   padding:12px;
   align-items:center;
