--- a/style.css
+++ b/style.css
@@ -238,9 +238,22 @@ textarea {
 
 #block_three {
   width:94vw;
-  height:50px;
+  height:60px;
   background-color: rgba(90,90,90,.7);
   border-radius:1rem;
   padding:12px;
   margin-top:12px;
+  display:flex;
+  flex-wrap:wrap;
+  gap:6px;
+
+}
+
+#dailyStreak {
+  font-size:.7rem;
+  width:100%;
+}
+
+#dailyStreakAdd {
+  font-size:.6rem;
 }
