--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ body {
   height:max-content;
   display:flex;
   gap:8px;
-  margin-top:12px;
+  margin-top:8px;
 }
 #block_two-left {
   width:50%;
@@ -148,6 +148,10 @@ textarea {
   border-radius:1rem;
   padding:16px;
   height:102px;
+}
+
+.dateDigits {
+  color:white;
 }
 
 #date {
