--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding-bottom:20px;
+  padding-bottom:12px;
 }
 
 #top_title {
@@ -76,6 +76,7 @@ body {
   margin-top:25%;
   font-weight:400;
   opacity:90%;
+  padding-right:10%;
 }
 
 .daily_quote-ref {
@@ -148,6 +149,7 @@ textarea {
   background-color: #252525;
   border-radius:1rem;
   padding:16px;
+  width:100%;
   height:102px;
 }
 
